Align "Build more than just an app" content correctly

--- a/static/css/section/_local.scss
+++ b/static/css/section/_local.scss
@@ -1464,3 +1464,9 @@ button.button--primary__deactivated:hover {
 .box-grey {
   border: 0;
 }
+
+// Override the "align-items: center" from equal-height__align-vertically,
+// which makes all items appear horizontally centered
+.equal-height > .equal-height__horizontal-left {
+  align-items: stretch;
+}
